--- a/data/team.toml
+++ b/data/team.toml
@@ -27,7 +27,7 @@ team = [
   {class = "P2", names = ["Mme Carine", "M. Peltier"]},
   {class = "P3", names = ["Mme Elodie", "Mme Hélène"]},
   {class = "P4", names = ["Mme Valérie B.", "Mme Isabelle"]},
-  {class = "P5", names = ["M. Demain", "M. Lemaire"]},
+  {class = "P5", names = ["M. Deman", "M. Lemaire"]},
   {class = "P6", names = ["Mme Malherbe", "M. Mahaudens"]},
   {class = "Polyvalents", names = ["M. Fromont", "Melle Aurélie", "Melle Tiffany"]},
   {class = "Néerlandais", names = ["Mme Laure"]},
@@ -45,7 +45,7 @@ team = [
   {class = "P4", names = ["Mme Sarah"]},
   {class = "P5", names = ["Mme Anne"]},
   {class = "P6", names = ["Mme Anne"]},
-  {class = "Polyvalents", names = ["Véronique"]},
+  {class = "Polyvalents", names = ["Mme Véronique"]},
   {class = "Néerlandais", names = ["Mme Laure"]},
   {class = "EPS", names = ["M. Pierre", "M. Nicolas"]},
   {class = "FLA", names = ["Melle Ophélie T."]},
