correction ephemerides + link to facebook

--- a/config.dev.toml
+++ b/config.dev.toml
@@ -18,3 +18,4 @@ tag = "tags"
 
 [params]
 #warning = "ceci est un message d'avertissement"
+facebook = "https://www.facebook.com/search/top?q=institut%20saint-joseph%20ath-maffle"
