--- a/config.prod.toml
+++ b/config.prod.toml
@@ -18,3 +18,4 @@ tag = "tags"
 
 [params]
 #warning = "ceci est un message d'avertissement"
+facebook = "https://www.facebook.com/Saint.Joseph.Ath.Maffle"
