--- a/data/reglements.toml
+++ b/data/reglements.toml
@@ -2,18 +2,22 @@
 name     = "Projet d'établissement"
 summary  = ""
 location = "regles/projet2021.pdf"
+image    = "projet_etab.png"
 
 [[document]]
 name     = "Projet éducatif"
 summary  = ""
 location = "regles/edu2021.pdf"
+image    = "projet_edu.png"
 
 [[document]]
 name     = "Projet Pédagogique"
 summary  = ""
 location = "regles/peda2021.pdf"
+image    = "projet_peda.png"
 
 [[document]]
 name     = "Règlement des études"
 summary  = ""
 location = "regles/regle2021.pdf"
+image    = "projet_regle.png"
