--- a/data/team.toml
+++ b/data/team.toml
@@ -5,30 +5,29 @@ team = [
   {class = "Accueil/M1A", names = ["Mme Nathalie B.", "Mme Laurence F."]},
   {class = "M1B/M2A", names = ["Mme Cécile B."]},
   {class = "M2B/3", names = ["Mme Véronique C.", "Mme Stéphanie G."]},
-  {class = "Maitre spécial", names = ["Mme Ophélie D."]},
+  {class = "Maitre spécial", names = ["Mme Ophélie D. (Psychomotricité)"]},
 ]
 
 [[Maternelles]]
 location = "Maffle"
 team = [
   {class = "Accueil/M1A", names = ["Mme Aline C.", "Mme Barbara H.", "Mme Nathalie D.", "Melle Sarah L."]},
-  {class = "M1", names = ["Mme Barbara", "Mme Brigitte (PUER)"]},
-  {class = "M2/M3A", names = ["M. Bruno B."]},
-  {class = "Maitre spécial", names = ["Mme Ophélie D."]},
+  {class = "M2/M3A", names = ["Mr Bruno B."]},
+  {class = "Maitre spécial", names = ["Mme Ophélie D. (Psychomotricité)"]},
 ]
 
 [[Primaires]]
 
 location = "Ath"
 team = [
-  {class = "P1", names = ["M. Laurent S.", "Mme Nathalie W."]},
-  {class = "P2", names = ["Mme Carine C.", "M. P. Peltier"]},
+  {class = "P1", names = ["Mr Laurent S.", "Mme Nathalie W."]},
+  {class = "P2", names = ["Mme Carine C.", "Mr P. Peltier"]},
   {class = "P3", names = ["Mme Elodie W.", "Mme Hélène D."]},
-  {class = "P4", names = ["M. FX Fromont", "Mme Isabelle L."]},
+  {class = "P4", names = ["Mr FX Fromont", "Mme Isabelle L."]},
   {class = "P5", names = ["Mme C. Malherbe", "Mme Valérie B."]},
-  {class = "P6", names = ["M. B. Deman", "M. P. Mahaudens"]},
-  {class = "Maitre spéciaux", names = ["M. Pierre B.", "M. Ludovic V", "Mme Laure D."]},
-  {class = "Aides", names= ["Mme Stéphanie G.", "M. P. Lemaire", "Mme Virginie B.", "Mme Valérie G."]}
+  {class = "P6", names = ["Mr B. Deman", "Mr P. Mahaudens"]},
+  {class = "Maitre spéciaux", names = ["Mr P. Brixy (Education Physique)", "Mr Ludovic V. (Education Physique)", "Mme Laure D. (Néerlandais)"]},
+  {class = "Aides", names= ["Mme Stéphanie G.", "Mr P. Lemaire", "Mme Virginie B.", "Mme Valérie G."]}
 ]
 
 [[Primaires]]
@@ -38,6 +37,6 @@ team = [
   {class = "P1/2", names = ["Mme Marie F.", "Mme Isabelle F."]},
   {class = "P3/4A", names = ["Mme Sarah V."]},
   {class = "P5/6A", names = ["Mme Anne B."]},
-  {class = "Maitre spéciaux", names = ["M. Pierre B.", "M. Ludovic V", "Mme Laure D."]},
+  {class = "Maitre spéciaux", names = ["Mr Pierre B. (Education Physique)", "Mr Ludovic V. (Education Physique)", "Mme Laure D. (Néerlandais)"]},
   {class = "Aides", names = ["Mme Véronique P.", "Mme Valérie G.", "Mme Virginie B."]}
 ]
