update home page with incoming events + recent updates

--- a/data/contact.toml
+++ b/data/contact.toml
@@ -26,6 +26,6 @@ email = "institutsaintjosephath@gmail.com"
 
 [[contact]]
 role  = "Comptabilité"
-name  = "Mme Sieuw"
+name  = "Mme Céline"
 phone = "068/28.38.47"
 email = "comptabilite.elfca@gmail.com"
