--- a/content/infos/documents/list.toml
+++ b/content/infos/documents/list.toml
@@ -1,18 +1,18 @@
 [[document]]
 name = "accord des parents"
 summary = ""
-location = "admin/ACCORD_DES_PARENTS.pdf"
+location = "docs/ACCORD_DES_PARENTS.pdf"
 image = "accord_parents.png"
 
 
 [[document]]
 name = "fiche d'inscription"
 summary = ""
-location = "admin/FICHE_INSCRIPTION.pdf"
+location = "docs/FICHE_INSCRIPTION.pdf"
 image = "fiche_inscription.png"
 
 [[document]]
 name = "justificaf d'absence"
 summary = ""
-location = "admin/JUSTIFICATIF_ABSENCE.pdf"
+location = "docs/JUSTIFICATIF_ABSENCE.pdf"
 image = "justificatif_absence.png"
