--- a/config.prod.toml
+++ b/config.prod.toml
@@ -18,5 +18,5 @@ summaryLength = 64
 tag = "tags"
 
 [params]
-warning = "Nouvelles mesures COVID en application à partir du 01/12/2021"
+warning = "Reprise des repas chaud et des activités extra scolaire à partir du 07 Février 2022"
 facebook = "https://www.facebook.com/Saint.Joseph.Ath.Maffle"
