update back to school

--- a/content/infos/documents/list.toml
+++ b/content/infos/documents/list.toml
@@ -22,3 +22,9 @@ name = "justificaf d'absence"
 summary = ""
 location = "docs/JUSTIFICATIF_ABSENCE.pdf"
 image = "justificatif_absence.png"
+
+[[document]]
+name = "déclaration de protection des données personnelles"
+summary = ""
+location = "docs/PROTECT.pdf"
+image = ""
