--- a/content/école/équipe/team.toml
+++ b/content/école/équipe/team.toml
@@ -20,23 +20,23 @@ team = [
 
 location = "Ath"
 team = [
-  {class = "P1", names = ["Mr Laurent S.", "Mme Nathalie W."]},
-  {class = "P2", names = ["Mme Carine C.", "Mr P. Peltier"]},
-  {class = "P3", names = ["Mme Elodie W.", "Mme Hélène D."]},
+  {class = "P1", names = ["Mr Laurent S."]},
+  {class = "P2", names = ["Mme Carine C."]},
+  {class = "P3", names = ["Mme Valérie B.", "Mme Valérie G.", "Mme Hélène D."]},
   {class = "P4", names = ["Mr FX Fromont", "Mme Isabelle L."]},
-  {class = "P5", names = ["Mme C. Malherbe", "Mme Valérie B."]},
+  {class = "P5", names = ["Mme C. Malherbe", "Mr P. Peltier"]},
   {class = "P6", names = ["Mr B. Deman", "Mr P. Mahaudens"]},
-  {class = "Maître spéciaux", names = ["Mr P. Brixy (Education Physique)", "Mr Ludovic V. (Education Physique)", "Mme Laure D. (Néerlandais)"]},
-  {class = "Aides", names= ["Mme Stéphanie G.", "Mr P. Lemaire", "Mme Virginie B.", "Mme Valérie G."]}
+  {class = "Maître spéciaux", names = ["Mr P. Brixy (Education Physique)", "Mme Laure D. (Néerlandais)"]},
+  # {class = "Aides", names= ["Mme Stéphanie G.", "Mr P. Lemaire", "Mme Virginie B.", "Mme Valérie G."]}
 ]
 
 [[Primaires]]
 
 location = "Maffle"
 team = [
-  {class = "P1/2", names = ["Mme Marie F.", "Mme Isabelle F."]},
-  {class = "P3/4A", names = ["Mme Sarah V."]},
+  {class = "P1/2", names = ["Mme Marie F."]},
+  {class = "P3/4", names = ["Mme Sarah V.", "Mme Véronique P."]},
   {class = "P5/6A", names = ["Mme Anne B."]},
-  {class = "Maître spéciaux", names = ["Mr Pierre B. (Education Physique)", "Mr Ludovic V. (Education Physique)", "Mme Laure D. (Néerlandais)"]},
-  {class = "Aides", names = ["Mme Véronique P.", "Mme Valérie G.", "Mme Virginie B."]}
+  {class = "Maître spéciaux", names = ["Mr Pierre B. (Education Physique)", "Mme Laure D. (Néerlandais)"]},
+  # {class = "Aides", names = ["Mme Véronique P.", "Mme Valérie G.", "Mme Virginie B."]}
 ]
