--- a/content/infos/contacts/list.toml
+++ b/content/infos/contacts/list.toml
@@ -14,7 +14,7 @@ image = "images/visit_maffle.png"
 
 [[Contact]]
 role  = "P.O."
-name  = "Mme Pillate test contact"
+name  = "Mme Pillate"
 phone = ""
 email = "institutsaintjosephath@gmail.com"
 
