--- a/content/infos/fournitures/ath.toml
+++ b/content/infos/fournitures/ath.toml
@@ -1,4 +1,7 @@
 [[document]]
+name = "maternelle"
+location = "docs/mat_ath.pdf"
+[[document]]
 name = "1ère Primaire"
 location = "docs/p1_ath.pdf"
 [[document]]
@@ -8,11 +11,8 @@ location = "docs/p2_ath.pdf"
 name = "3ème Primaire"
 location = "docs/p3_ath.pdf"
 [[document]]
-name = "4ème primaire (A)"
-location = "docs/p4a_ath.pdf"
-[[document]]
-name = "4ème primaire (B)"
-location = "docs/p4b_ath.pdf"
+name = "4ème primaire"
+location = "docs/p4_ath.pdf"
 [[document]]
 name = "5ème primaire"
 location = "docs/p5_ath.pdf"
