--- a/content/infos/fournitures/maffle.toml
+++ b/content/infos/fournitures/maffle.toml
@@ -1,6 +1,6 @@
 [[document]]
-name = "1ère et 2ème Primaire"
-location = "docs/p1_2_maffle.pdf"
+name = "acceuil et maternelle"
+location = "docs/mat_maffle.pdf"
 [[document]]
 name = "3ème et 4ème Primaire"
 location = "docs/p3_4_maffle.pdf"
