--- a/content/école/équipe/team.toml
+++ b/content/école/équipe/team.toml
@@ -2,18 +2,17 @@
 
 location = "Ath"
 team = [
-  {class = "Accueil/M1A", names = ["Mme Nathalie B.", "Mme Laurence F."]},
-  {class = "M1B/M2A", names = ["Mme Cécile B."]},
-  {class = "M2B/3", names = ["Mme Véronique C.", "Mme Stéphanie G."]},
-  {class = "Maître spécial", names = ["Mme Ophélie D. (Psychomotricité)"]},
+  {class = "Maternelles", names = ["Mme Cécile", "Mme Nathalie", "Mme Véronique", "Mme Stéphanie"]},
+  {class = "Puericultrice", names = ["Mme Laurence"]},
+  {class = "Psychomotricité", names = ["Mme Ophélie D."]},
 ]
 
 [[Maternelles]]
 location = "Maffle"
 team = [
-  {class = "Accueil/M1A", names = ["Mme Aline C.", "Mme Barbara H.", "Mme Nathalie D.", "Melle Sarah L."]},
-  {class = "M2/M3A", names = ["Mr Bruno B."]},
-  {class = "Maître spécial", names = ["Mme Ophélie D. (Psychomotricité)"]},
+  {class = "Maternelles", names = ["Mme Aline", "Mme Barbara", "Mr Bruno "]},
+  {class = "Puericultrice", names = ["Mme Tinat"]},
+  {class = "Psychomotricité", names = ["Mme Ophélie D."]},
 ]
 
 [[Primaires]]
@@ -22,12 +21,15 @@ location = "Ath"
 team = [
   {class = "P1", names = ["Mr Laurent S."]},
   {class = "P2", names = ["Mme Carine C."]},
-  {class = "P3", names = ["Mme Valérie B.", "Mme Valérie G.", "Mme Hélène D."]},
+  {class = "P3", names = ["Mme Valérie B.", "Mme Hélène D."]},
   {class = "P4", names = ["Mr FX Fromont", "Mme Isabelle L."]},
   {class = "P5", names = ["Mme C. Malherbe", "Mr P. Peltier"]},
   {class = "P6", names = ["Mr B. Deman", "Mr P. Mahaudens"]},
   {class = "Maître spéciaux", names = ["Mr P. Brixy (Education Physique)", "Mme Laure D. (Néerlandais)"]},
-  # {class = "Aides", names= ["Mme Stéphanie G.", "Mr P. Lemaire", "Mme Virginie B.", "Mme Valérie G."]}
+  {class = "Education Physique", names = ["Mr Brixy", "Mr Francis"]},
+  {class = "Néerlandais P3/4", names = ["Mme Vanessa"]},
+  {class = "Néerlandais P5/6", names = ["Mme Laure"]},
+  {class = "Polyvalence", names = ["Mme Valérie G.", "Mr Lemaire"]},
 ]
 
 [[Primaires]]
@@ -35,8 +37,10 @@ team = [
 location = "Maffle"
 team = [
   {class = "P1/2", names = ["Mme Marie F."]},
-  {class = "P3/4", names = ["Mme Sarah V.", "Mme Véronique P."]},
-  {class = "P5/6A", names = ["Mme Anne B."]},
-  {class = "Maître spéciaux", names = ["Mr Pierre B. (Education Physique)", "Mme Laure D. (Néerlandais)"]},
-  # {class = "Aides", names = ["Mme Véronique P.", "Mme Valérie G.", "Mme Virginie B."]}
+  {class = "P3/4", names = ["Mme Véronique P."]},
+  {class = "P5/6A", names = ["Mme Sarah", "Mme Isabelle"]},
+  {class = "Education Physique", names = ["Mr Brixy", "Mr Francis"]},
+  {class = "Néerlandais P3/4", names = ["Mme Vanessa"]},
+  {class = "Néerlandais P5/6", names = ["Mme Laure"]},
+  {class = "Polyvalence", names = ["Mme Valérie G."]},
 ]
